elliott-service/deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: elliott-service
  labels:
    app: elliott-service
spec:
  to:
    kind: Service
    name: elliott-service
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
